fixing mobile menus

--- a/src/main.scss
+++ b/src/main.scss
@@ -497,6 +497,53 @@
 			float: left;
 			margin: 1% 1% 0 0;
 			background-color:#014188;
+			
+			figure {
+				margin: 0;
+				padding:0;
+				figcaption {
+					display:block;
+					margin:0;
+					padding: 5%;
+					h1 {
+						text-indent: 0;
+						width: 100%;
+						color: $colorpw;
+						display: block;
+						font-size: 1.28em;
+						margin-top: 25%;
+						text-transform: uppercase;
+						line-height: 1.5em;
+						letter-spacing:0.02em;
+					}
+
+					span{
+						margin-bottom:1em;
+						display:block;
+						img{
+							display:block;
+							border:none;
+
+						}
+
+
+					}
+
+					p {
+						color: $colorpw;
+						font-size: 0.9em;
+						line-height: 1.5em;
+						margin: 0 0 5% 0;
+					}
+				}
+			}
+		}
+
+		#contactside{
+			width: 20%;
+			height: auto;
+			float: left;
+			margin: 1% 1% 0 0;
 			#contact-details {
 				background-color: #ffffff;
 				display: block;
@@ -539,45 +586,7 @@
 					}
 				}
 			}
-			figure {
-				margin: 0;
-				padding:0;
-				figcaption {
-					display:block;
-					margin:0;
-					padding: 5%;
-					h1 {
-						text-indent: 0;
-						width: 100%;
-						color: $colorpw;
-						display: block;
-						font-size: 1.28em;
-						margin-top: 25%;
-						text-transform: uppercase;
-						line-height: 1.5em;
-						letter-spacing:0.02em;
-					}
 
-					span{
-						margin-bottom:1em;
-						display:block;
-						img{
-							display:block;
-							border:none;
-
-						}
-
-
-					}
-
-					p {
-						color: $colorpw;
-						font-size: 0.9em;
-						line-height: 1.5em;
-						margin: 0 0 5% 0;
-					}
-				}
-			}
 		}
 		#content {
 			width: 70%;
@@ -1272,6 +1281,36 @@
 				}
 			}
 		}
+		#contactside{
+			width: 20%;
+			margin: 1% 1% 0 0;
+			#contact-details {
+				width: 96%;
+				padding: 10% 0;
+				list-style: none;
+				
+				li {
+					line-height: 20px;
+					height: 80px;
+					font-size: 0.9em;
+					&:first-line {
+						font-weight: bold;
+					}
+					span {
+						width: 18%;
+						img {
+							width: 41%;
+							margin: 10% auto;
+						}
+					}
+					a {
+						line-height: 20px;
+						font-size: 1em;
+					}
+				}
+			}
+		}
+		
 		#content {
 			width: 70%;
 			height: auto;
@@ -1725,30 +1764,7 @@
 		#leftside3 {
 			width: 20%;
 			margin: 1% 1% 0 0;
-			#contact-details {
-				width: 98%;
-				padding: 10% 0;
-				
-				li {
-					line-height: 20px;
-					height: 80px;
-					font-size: 0.9em;
-					&:first-line {
-						font-weight: bold;
-					}
-					span {
-						width: 18%;
-						img {
-							width: 41%;
-							margin: 10% auto;
-						}
-					}
-					a {
-						line-height: 20px;
-						
-					}
-				}
-			}
+			
 			figure {
 				margin: 0;
 				figcaption {
@@ -1777,6 +1793,36 @@
 					}
 				}
 			}
+		}
+
+		#contactside{
+			width: 20%;
+			margin: 1% 1% 0 0;
+			#contact-details {
+				width: 98%;
+				padding: 10% 0;
+				
+				li {
+					line-height: 20px;
+					height: 80px;
+					font-size: 0.9em;
+					&:first-line {
+						font-weight: bold;
+					}
+					span {
+						width: 18%;
+						img {
+							width: 41%;
+							margin: 10% auto;
+						}
+					}
+					a {
+						line-height: 20px;
+						
+					}
+				}
+			}
+
 		}
 		#content {
 			width: 70%;
@@ -2271,6 +2317,33 @@
 				}
 			}
 		}
+
+		#contactside{
+			width: 20%;
+			margin: 1% 1% 0 0;
+			#contact-details {
+				
+				li {
+					font-size: 0.85em;
+					line-height: 20px;
+					height: 80px;
+					&:first-line {
+						font-weight: bold;
+					}
+					span {
+						width: 18%;
+						img {
+							width: 48%;
+							margin: 10% auto;
+						}
+					}
+					a {
+						line-height: 20px;
+						
+					}
+				}
+			}
+		}
 		#content {
 			width: 70%;
 			height: auto;
@@ -2699,6 +2772,27 @@
 		#leftside3 {
 			width: 20%;
 			margin: 1% 1% 0 0;
+			
+			figure {
+				margin: 0;
+				figcaption {
+					top: -475px;
+					padding: 5%;
+					h1 {
+						font-size: 1em;
+
+					}
+					p {
+						font-size: 0.75em;
+						line-height: 1.6em;
+					}
+				}
+			}
+		}
+
+		#contactside{
+			width: 20%;
+			margin: 1% 1% 0 0;
 			#contact-details {
 				
 				li {
@@ -2718,21 +2812,6 @@
 					a {
 						line-height: 20px;
 						font-size: 1em;
-					}
-				}
-			}
-			figure {
-				margin: 0;
-				figcaption {
-					top: -475px;
-					padding: 5%;
-					h1 {
-						font-size: 1em;
-
-					}
-					p {
-						font-size: 0.75em;
-						line-height: 1.6em;
 					}
 				}
 			}
@@ -3164,6 +3243,26 @@
 		#leftside3 {
 			width: 20%;
 			margin: 1% 1% 0 0;
+			
+			figure {
+				margin: 0;
+				figcaption {
+
+					padding: 5%;
+					h1 {
+						font-size: 0.9em;
+					}
+					p {
+						font-size: 0.7em;
+						line-height: 1.6em;
+					}
+				}
+			}
+		}
+
+		#contactside{
+			width: 20%;
+			margin: 1% 1% 0 0;
 			#contact-details {
 				
 				li {
@@ -3183,20 +3282,6 @@
 					a {
 						line-height: 20px;
 						font-size: 1em;
-					}
-				}
-			}
-			figure {
-				margin: 0;
-				figcaption {
-
-					padding: 5%;
-					h1 {
-						font-size: 0.9em;
-					}
-					p {
-						font-size: 0.7em;
-						line-height: 1.6em;
 					}
 				}
 			}
@@ -3616,6 +3701,25 @@
 		#leftside3 {
 			width: 20%;
 			margin: 1% 1% 0 0;
+			
+			figure {
+				margin: 0;
+				figcaption {
+
+					padding: 5%;
+					h1 {
+						font-size: 0.9em;
+						}
+					p {
+						font-size: 0.65em;
+						line-height: 1.6em;
+					}
+				}
+			}
+		}
+		#contactside{
+			width: 20%;
+			margin: 1% 1% 0 0;
 			#contact-details {
 				
 				li {
@@ -3635,20 +3739,6 @@
 					a {
 						line-height: 20px;
 						font-size: 1em;
-					}
-				}
-			}
-			figure {
-				margin: 0;
-				figcaption {
-
-					padding: 5%;
-					h1 {
-						font-size: 0.9em;
-						}
-					p {
-						font-size: 0.65em;
-						line-height: 1.6em;
 					}
 				}
 			}
@@ -4072,7 +4162,7 @@
 			z-index: 100;
 			height: 50px;
 			left: 82vw;
-			top: 11vh;
+			top: 12vh;
 			border:none;
 			outline:none;
 			font-size:0.8em;
@@ -4084,13 +4174,22 @@
 			}
 			
 		}
+		.show{
+			left: 5px;
+			opacity:1;
+			@include TranSition(all 1s ease);
+		}
+		.hide{
+			left:-400px;
+			@include TranSition(all 1s ease);
+		}
+		
 		#leftside {
 			position:fixed;
-			z-index:100;
-			width: 200px;
+			top: 11vh;
+			width: 250px;
 			padding-top: 1%;
-			left:3vw;
-		
+			background-color:#fff;
 			.leftsidebox {
 				width: 96%;
 				margin-bottom: 1%;
@@ -4174,14 +4273,15 @@
 			/*.leftsidebox end*/
 		}
 		/*#leftside end*/
+
 		#leftside2 {
 			position:fixed;
 			z-index:100;
-			top: 12vh;
+			top: 11vh;
 			width: 200px;
 			margin-top: 1%;
 			@include TranSition(all 1s ease);
-			left:7px;
+			
 			h1 {
 				text-indent: 2%;
 				font-size: 0.65em;
@@ -4206,12 +4306,30 @@
 			}
 		}
 		#leftside3 {
+			display:none;
+			
+			figure {
+				margin: 0;
+				figcaption {
+					top: -254px;
+					padding: 5%;
+					h1 {
+						font-size: 0.6em;
+						margin: 18% 0;
+						line-height: 1.5em;
+					}
+					p {
+						font-size: 0.45em;
+						line-height: 1.3em;
+					}
+				}
+			}
+		}
+		#contactside{
 			position: absolute;
-			top: 12vh;
-			width:60%;
-			margin: 0 ;
-			@include TranSition(all 1s ease);
-			left:3vw;
+			top: 13vh;
+			width: 60%;
+			margin:0;
 			#contact-details {
 				width: 100%;
 				li {
@@ -4234,23 +4352,8 @@
 					}
 				}
 			}
-			figure {
-				margin: 0;
-				figcaption {
-					top: -254px;
-					padding: 5%;
-					h1 {
-						font-size: 0.6em;
-						margin: 18% 0;
-						line-height: 1.5em;
-					}
-					p {
-						font-size: 0.45em;
-						line-height: 1.3em;
-					}
-				}
-			}
 		}
+
 		#content {
 			width: 100%;
 			height: auto;
@@ -4513,7 +4616,6 @@
 			}
 			#toggle-menu,button {
 				left: 3vw;
-				top: 7vh;
 				font-size: 0.9em;
 			}
 			/*contact end*/
@@ -4565,7 +4667,7 @@
 			
 		}
 		#leftside {
-			width: 30%;
+			width: 250px;
 			padding-top: 1%;
 			.leftsidebox {
 				width: 96%;
@@ -4676,7 +4778,12 @@
 			}
 		}
 		#leftside3 {
-			width:60%;
+			display:none;
+			
+		}
+
+		#contactside{
+			width: 60%;
 			#contact-details {
 				
 				li {
@@ -4695,22 +4802,7 @@
 					}
 				}
 			}
-			figure {
-				margin: 0;
-				figcaption {
-					top: -254px;
-					padding: 5%;
-					h1 {
-						font-size: 0.6em;
-						margin: 18% 0;
-						line-height: 1.5em;
-					}
-					p {
-						font-size: 0.45em;
-						line-height: 1.3em;
-					}
-				}
-			}
+
 		}
 		#content {
 			width: 100%;
@@ -5146,6 +5238,26 @@
 		}
 		#leftside3 {
 			width:60%;
+			
+			figure {
+				margin: 0;
+				figcaption {
+					top: -254px;
+					padding: 5%;
+					h1 {
+						font-size: 0.6em;
+						margin: 18% 0;
+						line-height: 1.5em;
+					}
+					p {
+						font-size: 0.45em;
+						line-height: 1.3em;
+					}
+				}
+			}
+		}
+		#contactside{
+			width: 60%;
 			#contact-details {
 				
 				li {
@@ -5161,22 +5273,6 @@
 					}
 					a {
 						line-height: 20px;
-					}
-				}
-			}
-			figure {
-				margin: 0;
-				figcaption {
-					top: -254px;
-					padding: 5%;
-					h1 {
-						font-size: 0.6em;
-						margin: 18% 0;
-						line-height: 1.5em;
-					}
-					p {
-						font-size: 0.45em;
-						line-height: 1.3em;
 					}
 				}
 			}
@@ -5611,7 +5707,12 @@
 			}
 		}
 		#leftside3 {
-			width:50%;
+			display:none;
+			
+		}
+
+		#contactside{
+			width: 60%;
 			#contact-details {
 				
 				li {
@@ -5627,22 +5728,6 @@
 					}
 					a {
 						line-height: 20px;
-					}
-				}
-			}
-			figure {
-				margin: 0;
-				figcaption {
-					top: -254px;
-					padding: 5%;
-					h1 {
-						font-size: 0.6em;
-						margin: 18% 0;
-						line-height: 1.5em;
-					}
-					p {
-						font-size: 0.45em;
-						line-height: 1.3em;
 					}
 				}
 			}
@@ -6091,7 +6176,11 @@
 			}
 		}
 		#leftside3 {
-			width:60%;
+			display:none;
+			
+		}
+		#contactside{
+			width: 60%;
 			#contact-details {
 				
 				li {
@@ -6107,22 +6196,6 @@
 					}
 					a {
 						line-height: 20px;
-					}
-				}
-			}
-			figure {
-				margin: 0;
-				figcaption {
-					top: -254px;
-					padding: 5%;
-					h1 {
-						font-size: 0.6em;
-						margin: 18% 0;
-						line-height: 1.5em;
-					}
-					p {
-						font-size: 0.45em;
-						line-height: 1.3em;
 					}
 				}
 			}
@@ -6568,7 +6641,11 @@
 			}
 		}
 		#leftside3 {
-			width:60%;
+			display:none;
+			
+		}
+		#contactside{
+			width: 60%;
 			#contact-details {
 				
 				li {
@@ -6584,22 +6661,6 @@
 					}
 					a {
 						line-height: 20px;
-					}
-				}
-			}
-			figure {
-				margin: 0;
-				figcaption {
-					top: -254px;
-					padding: 5%;
-					h1 {
-						font-size: 0.6em;
-						margin: 18% 0;
-						line-height: 1.5em;
-					}
-					p {
-						font-size: 0.45em;
-						line-height: 1.3em;
 					}
 				}
 			}
@@ -7046,7 +7107,11 @@
 			}
 		}
 		#leftside3 {
-			width:65%;
+			display:none;
+			
+		}
+		#contactside{
+			width: 60%;
 			#contact-details {
 				
 				li {
@@ -7062,22 +7127,6 @@
 					}
 					a {
 						line-height: 20px;
-					}
-				}
-			}
-			figure {
-				margin: 0;
-				figcaption {
-					top: -254px;
-					padding: 5%;
-					h1 {
-						font-size: 0.6em;
-						margin: 18% 0;
-						line-height: 1.5em;
-					}
-					p {
-						font-size: 0.45em;
-						line-height: 1.3em;
 					}
 				}
 			}
@@ -7524,7 +7573,11 @@
 			}
 		}
 		#leftside3 {
-			width:65%;
+			display:none;
+			
+		}
+		#contactside{
+			width: 60%;
 			#contact-details {
 				
 				li {
@@ -7540,22 +7593,6 @@
 					}
 					a {
 						line-height: 20px;
-					}
-				}
-			}
-			figure {
-				margin: 0;
-				figcaption {
-					top: -254px;
-					padding: 5%;
-					h1 {
-						font-size: 0.6em;
-						margin: 18% 0;
-						line-height: 1.5em;
-					}
-					p {
-						font-size: 0.45em;
-						line-height: 1.3em;
 					}
 				}
 			}
@@ -8004,7 +8041,11 @@
 			}
 		}
 		#leftside3 {
-			width:65%;
+			display:none;
+			
+		}
+		#contactside{
+			width: 60%;
 			#contact-details {
 				
 				li {
@@ -8020,22 +8061,6 @@
 					}
 					a {
 						line-height: 20px;
-					}
-				}
-			}
-			figure {
-				margin: 0;
-				figcaption {
-					top: -254px;
-					padding: 5%;
-					h1 {
-						font-size: 0.6em;
-						margin: 18% 0;
-						line-height: 1.5em;
-					}
-					p {
-						font-size: 0.45em;
-						line-height: 1.3em;
 					}
 				}
 			}
