--- a/src/main.scss
+++ b/src/main.scss
@@ -13,6 +13,7 @@
 		padding: 0 2%;
 		font-family: $font-style1;
 		@include clearfix();
+		min-height: 1220px;
 		header {
 			width: 100%;
 			height: 117px;
@@ -4053,8 +4054,8 @@
 				line-height: 40px;
 				&:hover{
 					cursor:pointer;
-					background-color: #fff;
-					color: $colorbg;
+					background-color: $color2;
+					color: #fff;
 	
 				}
 			}
@@ -7409,7 +7410,7 @@
 			}
 			#toggle-menu,button {
 
-				top: 5vh;
+				top: 8.5vh;
 				font-size: 0.9em;
 			}
 			/*contact end*/
